--- a/assets/etc/supervisor/supervisord.conf
+++ b/assets/etc/supervisor/supervisord.conf
@@ -8,25 +8,19 @@ logfile_maxbytes=50MB                           ; (max main logfile bytes b4 rot
 logfile_backups=10                              ; (num of main logfile rotation backups;default 10)
 loglevel=info                                   ; (log level;default info; others: debug,warn,trace)
 
-[inet_http_server]
-port=127.0.0.1:9001
-
-[supervisorctl]
-serverurl=http://127.0.0.1:9001
+[unix_http_server]
+file=/var/run/supervisor.sock
+username = reverseproxy
+password = reverseproxy
+chmod=0766
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-[program:apache2]
-command = /usr/local/bin/start_apache2.sh
-autostart = true
-autorestart = true
-startsecs = 5
-stopwaitsecs = 3
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+username = reverseproxy
+password = reverseproxy
 
-[program:cron]
-command = /usr/local/bin/start_cron.sh
-autostart = true
-autorestart = true
-startsecs = 5
-stopwaitsecs = 3
+[include]
+files = /etc/supervisor/conf.d/*.conf
